# code_practice

./: README.md
c/parallel_programming_rsreu_master_2_sem/: CMakeLists.txt  main.c  report.xlsx
c/parallel_programming_rsreu_master_2_sem/utils/: CMakeLists.txt  bitmap.c  bitmap.h  kernel.c  kernel.h
go/leetcode/0001_two_sum/: two_sum.go
go/leetcode/0144_binary_tree_preorder_traversal/: solution.go  solution_test.go
go/leetcode/1114_print_in_order/: description.md  solution.go
go/stepik/homework_01_tree/: main.go  readme.md
go/stepik/homework_02_signer/: signer.go
go/stepik/homework_03_optimization/: common.go  fast.go  record.go  record_easyjson.go  report_optimization.docx
go/stepik/homework_03_optimization/easyjson/: record.go  record_easyjson.go
python/leetcode/0088_merge_sorted_array/: description.md  solution.py
python/yandex_algo_math_ml/: pyproject.toml
python/yandex_algo_math_ml/src/graph/: bellman_ford.py  dijkstra.py  floyd_warshall.py
python/yandex_algo_math_ml/tests/1_graph/: conftest.py  test_bellman_ford.py  test_dijkstra.py
